[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[scripts]
build = "cargo build --release"
run = "cargo run --release"
format = "cargo fmt"
test = "cargo test"


[dependencies]
tokio = { version = "1", features = ["full"] }
